Fixed a bug with horizontal scrolling on mobile

--- a/src/components/Birds/index.module.sass
+++ b/src/components/Birds/index.module.sass
@@ -3,7 +3,7 @@
   position: absolute
   top: 0
   height: 100%
-  max-width: 100%
+  width: 100%
 
 
 .birdContainerOne,
