--- a/src/index.sass
+++ b/src/index.sass
@@ -23,7 +23,8 @@
   .small-text
     @apply drop-shadow-md text-small font-semibold max-xl:text-small-medium-screen
 
-html
+html,
+body
   overflow-x: hidden
 
 body
